# ddpc

./: .gitignore  LICENSE  README.md  coverage.xml  pyproject.toml  ruff.toml  tox.ini
.github/workflows/: ci.yml
src/ddpc/: __init__.py  __main__.py  _cli_base.py  _utils.py  cli.py
src/ddpc/data/: __init__.py  __main__.py  band.py  cli.py  dos.py  export.py  processors.py  utils.py
src/ddpc/structure/: __init__.py  __main__.py  _cli_base.py  cli.py  io.py  orthogonal.py  primitive.py  symmetry.py  transform.py
src/ddpc/structure/readers/: __init__.py  dspaw_as.py  rescu_xyz.py
src/ddpc/structure/writers/: __init__.py  dspaw_as.py  rescu_xyz.py
tests/: __init__.py  conftest.py  test_binary.sh  test_main_cli.py  test_orthogonal_edge_cases.py
tests/__snapshots__/: test_io_export.ambr
tests/data/cli/: __init__.py  test_data_cli.py
tests/data/integration/: test_export_formats.py
tests/data/raw/: collinear_band.h5  collinear_band.json  collinear_dos.h5  collinear_dos.json  collinear_pband.h5  collinear_pdos.h5  collinear_pdos.json  noncollinear_band.h5  noncollinear_band.json  noncollinear_dos.h5  noncollinear_dos.json  noncollinear_pdos.h5  noncollinear_pdos.json  spinless_band.h5  spinless_band.json  spinless_dos.h5  spinless_dos.json  spinless_pband.h5  spinless_pband.json  spinless_pdos.h5  spinless_pdos.json
tests/data/unit/: test_band.py  test_dos.py  test_processors.py
tests/structure/cli/: __init__.py  test_structure_cli.py
tests/structure/integration/: __init__.py  test_format_conversion.py
tests/structure/raw/: BN.xyz  POSCAR  POSCAR_scaled  Si.xyz  SiTi.xyz  all.as  fixxyz.as  fixxyzmagxyz.as  graphene.xyz  huge.xyz  lat.as  mag.as  magxyz.as
tests/structure/unit/: __init__.py  test_io.py  test_orthogonal.py  test_primitive.py  test_rescu_xyz.py  test_symmetry.py
