[project]
name = "ddpc"
version = "2025.12.24"
description = "Dft Data Processing Core"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "xbugs221" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = ["click>=8.1", "rich>=12.0"]

[project.optional-dependencies]
data = ["numpy>=1.20"]
data-full = [
  "ddpc[data]",
  "h5py<3.14; python_version < '3.14'",
  "h5py>=3.14; python_version >= '3.14'",
]

structure = ["ase>=3.22"]
structure-full = ["ddpc[structure]", "spglib>=2.0"]

basic = ["ddpc[data]", "ddpc[structure]"]
full = ["ddpc[data-full]", "ddpc[structure-full]"]

[project.scripts]
ddpc = "ddpc.cli:cli"

[build-system]
requires = ["uv_build>=0.9.8"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--showlocals",
  "--cov=src/ddpc",
  "--cov-report=term-missing",
  "--cov-report=html",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/ddpc"]
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[dependency-groups]
cicd = [
  "ordered-set>=4.1.0",
  "pyinstaller>=5.0",
  "zstandard>=0.21",
  "auditwheel>=5.4",
]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "pytest-xdist>=3.0",
  "black>=22.0",
  "flake8>=5.0",
  "isort>=5.0",
]

[tool.basedpyright]
include = ["src"]
exclude = ["**/__pycache__", "build", "dist"]
pythonVersion = "3.7"
typeCheckingMode = "standard"
reportMissingImports = "warning"
reportMissingTypeStubs = false
